# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\ArtificialIntellegenceController;
 use App\Http\Controllers\AverageDailyController;
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
@@ -10,3 +11,5 @@ use App\Http\Controllers\CollectDataController;
 Route::post('/send_collect_data', [CollectDataController::class, 'SendCollectData']);
 Route::get('/get_collect_data', [CollectDataController::class, 'GetAllCollectData']);
 Route::get('/get_average_daily', [AverageDailyController::class, 'GetAverageDaily']);
+Route::post('/send_message', [ArtificialIntellegenceController::class, 'SendMessage']);
+Route::get('/get_message_data', [ArtificialIntellegenceController::class, 'GetMessageData']);
